--- a/app/policies/policies.mdx
+++ b/app/policies/policies.mdx
@@ -1,57 +1,61 @@
-import Alert from '@mui/material/Alert';
+import Link from "@mui/material/Link";
+import Alert from "@mui/material/Alert";
+import AlertTitle from "@mui/material/AlertTitle";
+import WhatshotIcon from '@mui/icons-material/Whatshot'; // Find more here: https://mui.com/material-ui/material-icons/
+import {DISCOURSE_URL, NOTEBOOK_URL} from "@/app/config";
 
-# BadgerHub Policies
+# BadgerCompute Policies
 
-BadgerHub is an interactive JupyterLab service operated by the Center of High Throughput Computing for use by UW - Madison affiliates with a valid UW - Madison NetID.
+BadgerCompute is an interactive JuypterLab service operated by the Center for High Throughput Computing for use by UW - Madison affiliates with a valid UW - Madison NetID. This page lists policies for access and use.
 
-To use BadgerHub, you must complete the [Canvas certification course](/get-started/index.md#canvas-course).
+Any UW - Madison affiliate can access BadgerHub after completing the [Canvas certification course](/get-started/index.md#canvas-course). Annual re-certification is required.
 **You must agree to these policies in order to complete the course.**
 
-This page summarizes the policies.
-
-!!! tip "Questions or Concerns?"
-
-    See the "Policies" section of the community Discourse forum [link].
+<Alert severity="info" icon={<WhatshotIcon color="info" />} sx={{ mb: 3 }}>
+	<AlertTitle>Questions or Concerns?</AlertTitle>
+	<>See the &quot;Policies&quot; section of the community <Link href={DISCOURSE_URL} target={'_blank'}>Discourse forum</Link>.</>
+</Alert>
 
 ## Acceptable Use Policy
 
-For the full document detailing the policies, see [link].
+For the full document detailing the policies, see our [Acceptable Use Policy](acceptable-use-policy.md) page.
 
-By using BadgerHub, you agree:
+### Highlights
 
-1. **To use BadgerHub for academic purposes ONLY** and not for financial gain (such as for-profit work or cryptocurrency mining) nor for any unlawful purpose.
+By using BadgerCompute, you agree:
 
-2. **Not to use BadgerHub for work with restricted data**, such as HIPAA-protected or export-controlled data.
+1. **To use BadgerCompute for academic purposes ONLY** and not for financial gain (such as for-profit work or cryptocurrency mining) nor for any unlawful purpose.
 
-3. **To securely manage your NetID and Password** and any other university credentials used to access BadgerHub.
+2. **Not to use BadgerCompute for work with restricted data**, such as HIPAA-protected or export-controlled data.
 
-4. **To renew access to BadgerHub once a year** by completing the certification course, including a review of these policies.
+3. **To securely manage your NetID and Password** and any other university credentials used to access BadgerCompute.
 
-5. **To be responsible for backing up any important data** that you've placed in - or generated using - BadgerHub.
+4. **To renew access to BadgerCompute once a year** by completing the certification course, including a review of these policies.
+
+5. **To be responsible for backing up any important data** that you've placed in - or generated using - BadgerCompute.
 
 ## Data Retention Policy
 
-Each **active** BadgerHub user is allocated 20 GB of persistent storage.
-This storage is retained for **up to** 30 days after your last login.
-**After 30 days without logging in BadgerHub, you are considered an INACTIVE user and your data will be automatically deleted.**
+Each BadgerCompute user is allocated 20 GB of persistent storage (in the `work` subfolder of the initial file view).
+The data in this storage is retained for **up to** 30 days after your last login.
+**After 30 days without logging in BadgerCompute, your data will be automatically deleted.**
 
-<Alert severity="error">
-	BadgerHub storage is <strong>not backed up</strong>.<br />
-	It is intended for <strong>temporary, convenient storage only</strong>.<br /><br />
-	You should never store your only copy of important data on BadgerHub.<br />
-	Always keep external backups in systems like <a href="https://it.wisc.edu/services/researchdrive/">ResearchDrive</a> or other cloud storage platforms.
+<Alert severity="error" sx={{ mb: 3 }}>
+	BadgerCompute storage is **not backed up** It is intended for **temporary, convenient storage only**.
+
+	You should never store your only copy of important data on BadgerCompute. Always keep external backups in systems like <a href="https://it.wisc.edu/services/researchdrive/" target="_blank" rel="noopener">ResearchDrive</a> or other cloud storage platforms.
 </Alert>
 
-<Alert severity="warning">
-	BadgerHub administrators reserve the right to remove any data from user storage if needed to maintain overall system performance.
+<Alert severity="warning" sx={{ mb: 3 }}>
+  BadgerCompute administrators reserve the right to remove any data from user storage if needed to maintain overall system performance.
 </Alert>
 
 ## Availability
 
-BadgerHub is a shared computing platform with limited capacity, intended to serve the entire UW-Madison community.
-We strive to provide a responsive experience, but during peak usage periods you may experience increased wait times when launching notebooks.
+BadgerCompute is a shared computing platform with limited capacity, intended to serve the entire UW-Madison community.
+While we strive to provide a responsive experience, during peak usage periods you may experience increased wait times when launching notebooks.
 
-Resources on BadgerHub are provisioned on a best-effort basis — **availability is not guaranteed**.
+Resources on BadgerCompute are provisioned on a best-effort basis — **availability is not guaranteed**.
 There are no resource reservations or service-level promises.
 All users are expected to be mindful of their impact on shared capacity.
 
@@ -62,4 +66,4 @@ Users should not expect to exceed the following resource allocation per notebook
 
 ## Privacy Notice
 
-BadgerHub administrators collect information about the users of BadgerHub and is used solely for managing the service, in adherence with the [UW - Madison Privacy Notice](https://www.wisc.edu/privacy-notice/).
+BadgerCompute administrators collect information about the users of BadgerCompute and it is used solely for managing the service, in adherence with the [UW - Madison Privacy Notice](https://www.wisc.edu/privacy-notice/).
