--- a/docs/admin-docs.mdx
+++ b/docs/admin-docs.mdx
@@ -7,17 +7,19 @@ import AlertTitle from "@mui/material/AlertTitle"
 import WhatshotIcon from '@mui/icons-material/Whatshot'; // Find more here: https://mui.com/material-ui/material-icons/
 import AlertDropDown from "@/components/AlertDropDown";
 
+
+
 # Admin Docs
 
 **If you are a user, you are in the wrong place**
 
 The documentation here has a couple conversions from mkdocs items to JSX components.
 
-# HTML
+## HTML
 
 You might want to use HTML for more control over your content. Here are some examples of how to do that.
 
-## Inline Styling
+### Inline Styling
 
 You can use inline styling in HTML tags. Remember to use double curly braces for style in JSX.
 
@@ -27,7 +29,7 @@ You can use inline styling in HTML tags. Remember to use double curly braces for
 
 <p style={{color: 'blue', fontSize: '20px'}}>This is a blue paragraph with a font size of 20px.</p>
 
-## Style Blocks
+### Style Blocks
 
 You can use HTML in MDX files. Here is a example of a styled table using the style block. Note the use of the `<style jsx>` tag to add styles to the table, which is wrapped with `{` and `}` to escape the `{}` which are used in JSX.
 
@@ -129,7 +131,7 @@ You can use HTML in MDX files. Here is a example of a styled table using the sty
 	</tbody>
 </table>
 
-## Style Sheets
+### Style Sheets
 
 You can also create a CSS file in the `public` folder and import it into your MDX file.
 
@@ -152,11 +154,11 @@ import '@/public/styles/custom-example.css'; // Colors divs with the custom clas
 
 
 
-# Image
+## Image
 
 Images are the same, drop them into the `/public/docs` folder and reference them using the `/docs/` prefix.
 
-## MDX
+### MDX
 
 ```md
 ![Image title](/docs/file.svg)
@@ -164,7 +166,7 @@ Images are the same, drop them into the `/public/docs` folder and reference them
 
 ![Image title](/docs/file.svg)
 
-## HTML
+### HTML
 
 Or you can use HTML for more control. Remember to use double curly braces for style in JSX.
 
