Transferring changes from draft repo

--- a/app/get-started/get-started.mdx
+++ b/app/get-started/get-started.mdx
@@ -1,55 +1,65 @@
 import Alert from '@mui/material/Alert';
+import AlertTitle from '@mui/material/AlertTitle';
+import HelpIcon from '@mui/icons-material/Help';
 
-# Get Started with BadgerHub
+# Get Started with BadgerCompute
 
-## Is BadgerHub for Me?
+1. [Is BadgerCompute for Me?](#is-badgercompute-for-me)
+2. [Take the Canvas Course](#take-the-canvas-course)
+3. [Log in to BadgerCompute](#log-in-to-badgercompute)
 
-### BadgerHub is a good fit for...
+## Is BadgerCompute for Me?
 
-BadgerHub is primarily intended for researchers at UW-Madison.
+You will find that BadgerCompute is great for academic or research settings for
 
-BadgerHub is good for:
+* testing scripts using Python, R, or Julia
+* exploring and visualizing datasets
+* writing or following tutorials written in Jupyter Notebooks
 
-* Testing new Python, R, or Julia scripts
-* Exploring and visualizing datasets
-* Working through tutorials written in Jupyter Notebooks
+Before proceeding, we recommend that you read our [Policies](/docs/policies).
 
-### BadgerHub is **not** a good fit for....
-
-Due to its small scale, BadgerHub is not intended for large-scale use.
-
-BadgerHub is **not** good for:
-
-* Courses with >10 students
-* Personal or commercial use
-* CI/CD development
-
-<Alert severity="info" sx={{ my: 2 }}>
-  <strong>Still not sure?</strong> If you're still not sure if BadgerHub is a good fit for you, we encourage you to ask in our Discourse forum [discourse_link].
+<Alert severity="warning" icon={<HelpIcon />} sx={{ mb: 3 }}>
+  <AlertTitle>Not sure?</AlertTitle>
+  Check out [the FAQs](/docs/faqs) for answers to common scenarios.
+  If you still have questions, ask the [BadgerCompute Community](/docs/get-help#badgercompute-community)
 </Alert>
 
 ## Take the Canvas Course
 
-To gain access to BadgerHub, you must first complete the Canvas course.
-This is required to ensure that users understand the policies and acceptable uses for BadgerHub.
+<a href="https://canvas.wisc.edu/enroll/JR887K" >
+<img src="/docs/get-started-canvas-course.svg" alt="Steps to get access to BadgerCompute" style={{height: '150px', width: 'auto'}} />
+</a>
+
+To gain access to BadgerCompute, you must first complete the Canvas course.
+This is required to ensure that users understand the policies and acceptable uses for BadgerCompute.
 
 ### Step 1
 
-Enroll in the current Canvas Course by logging in to [link] using your NetID.
+Enroll in the current Canvas Course by logging in to the [BadgerCompute Certification Course](https://canvas.wisc.edu/enroll/JR887K) using your NetID and clicking **"Enroll in Course."**
 
 ### Step 2
 
-Complete the modules in the Canvas Course to learn how to use BadgerHub.
-Then pass the quiz to show us you understand the basics of using BadgerHub.
+Complete the modules in the Canvas Course to learn how to use BadgerCompute.
+Then pass the quiz to show us you understand the basics of using BadgerCompute.
 
 ### Step 3
 
-Wait for the Welcome email.
-Your account will not be ready to use until you receive the email!
+After you successfully complete the course, your account will be created in the next 24 hours.
 
-## Login to BadgerHub
+## Log in to BadgerCompute
+<a href="https://launch.badgercompute.wisc.edu" >
+<img src="/docs/get-started-login.png" alt="Log in an launch BadgerCompute" style={{height: '120px', width: 'auto'}} />
+</a>
 
-You can only login to BadgerHub if you have completed the [Canvas Course](#canvas-course).
+You can only log in to BadgerCompute if you have completed the [Canvas Course](#canvas-course).
 
-1. Launch BadgerHub by clicking the "Launch" button in the top right corner of this website, or by navigating to [launch.badgerhub.wisc.edu](https://launch.badgerhub.wisc.edu).
-2. Login to BadgerHub using your NetID and corresponding password, the same way you would log in to [my.wisc.edu](https://my.wisc.edu).
+1. Launch BadgerCompute by clicking the "Launch" button in the top right corner of this website, or by navigating to [launch.badgercompute.wisc.edu](https://launch.badgercompute.wisc.edu).
+
+2. Log in to BadgerCompute using your NetID and corresponding password, the same way you would log in to [my.wisc.edu](https://my.wisc.edu).
+
+<Alert severity="info" sx={{ mb: 3 }}>
+    For more information on how to log in, see our [Log in Guide](../docs/login).
+</Alert>
+
+## Next Steps
+
