--- a/app/policies/policies.mdx
+++ b/app/policies/policies.mdx
@@ -8,7 +8,7 @@ import {DISCOURSE_URL} from "@/app/config";
 
 BadgerCompute is an interactive JuypterLab service operated by the Center for High Throughput Computing for use by UW - Madison affiliates with a valid UW - Madison NetID. This page lists policies for access and use.
 
-Any UW - Madison affiliate can access BadgerHub after completing the [Canvas certification course](/get-started/index.md#canvas-course). Annual re-certification is required.
+Any UW - Madison affiliate can access BadgerCompute after completing the [Canvas certification course](/get-started/index.md#canvas-course). Annual re-certification is required.
 **You must agree to these policies in order to complete the course.**
 
 <Alert severity="info" icon={<WhatshotIcon color="info" />} sx={{ mb: 3 }}>
