policy updates before launch

--- a/app/policies/policies.mdx
+++ b/app/policies/policies.mdx
@@ -13,12 +13,12 @@ Any UW - Madison affiliate can access BadgerCompute after completing the [Canvas
 
 <Alert severity="info" icon={<WhatshotIcon color="info" />} sx={{ mb: 3 }}>
 	<AlertTitle>Questions or Concerns?</AlertTitle>
-	See the &quot;Policies&quot; section of the community <Link href={DISCOURSE_URL} target={'_blank'}>Discourse forum</Link>.
+	Message the <Link href={DISCOURSE_URL} target={'_blank'}>community forum</Link>.
 </Alert>
 
 ## Acceptable Use Policy
 
-For the full document detailing the policies, see our [Acceptable Use Policy](acceptable-use-policy.md) page.
+For the full document detailing the policies, see our [Acceptable Use Policy](acceptable-use-policy) page.
 
 ### Highlights
 
@@ -64,6 +64,7 @@ Users should not expect to exceed the following resource allocation per notebook
 
 * **CPU**: 4 cores
 * **Memory**: 16 GB RAM
+* **GPUs** (if requested): 5 - 10GB of GPU RAM, [capability 7.5 or 8.0](https://developer.nvidia.com/cuda-gpus)
 
 ## Privacy Notice
 
