--- a/docs/login.mdx
+++ b/docs/login.mdx
@@ -1,8 +1,12 @@
+import Alert from "@mui/material/Alert"
+import AlertTitle from "@mui/material/AlertTitle"
+import AlertDropDown from "@/components/AlertDropDown";
+
 # Log in to BadgerCompute
 
 Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, and launch your notebook server.
 
-> **At a glance** <br>
+> **At a glance**
 > 1) Go to the BadgerCompute Launch URL → 2) Login with your NetID → 3) Approve sign-in using Duo 2FA → 4) Pick a server option → 5) Start your server.
 
 
@@ -17,8 +21,7 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
 
 1. **Open the BadgerCompute Launch URL**
     
-    Visit the BadgerCompute launch page:  
-    [launch.badgercompute.wisc.edu](https://launch.badgercompute.wisc.edu){ .md-button }
+    Visit the BadgerCompute launch page: [launch.badgercompute.wisc.edu](https://launch.badgercompute.wisc.edu)
 
 2. **Click “Sign in with your UW-Madison NetID”**
 
@@ -33,9 +36,12 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
     
     ![Image title](/docs/login-guide/netid-login.png)
 
-    ??? tip "Two Factor Authentication (2FA)"
-        You will likely be prompted for 2FA to approve the sign-in via Duo or your chosen method. <br><br>
-        ![Image title](/docs/login-guide/Duo-code.png)
+
+		<AlertDropDown title={'Two Factor Authentication (2FA)'} severity="info">
+			You will likely be prompted for 2FA to approve the sign-in via Duo or your chosen method.
+   		<img src="/docs/login-guide/Duo-code.png" alt="Duo authentication prompt" style={{ width: "100%" }} />
+	  </AlertDropDown>
+
 
 4. **(First time only) Review/accept any terms (if applicable)** 
 
@@ -63,15 +69,17 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
     
     ![Image title](/docs/login-guide/notebook-starting-light.png#only-light)
     ![Image title](/docs/login-guide/notebook-starting-dark.png#only-dark)
-   
-    ???+ warning "If it takes too long"
-        If it takes >3 minutes, refresh the page once. If it still doesn’t start, try a different image. Please note, servers may take longer to start during peak usage times. BadgerCompute is a shared resource and availability is not guaranteed.
+
+
+		<AlertDropDown title={'If it takes too long'} severity="warning" defaultOpen={true}>
+      If it takes &gt;3 minutes, refresh the page once. If it still doesn’t start, try a different image. Please note, servers may take longer to start during peak usage times. BadgerCompute is a shared resource and availability is not guaranteed.
+    </AlertDropDown>
 
 9. **You’re in!** Start working in JupyterLab.
     
     You can create notebooks, open terminals, and manage files. 
     
-    ![Image title](/docs/login-guide/jupyter-lab.png){ align=left }
+    ![Image title](/docs/login-guide/jupyter-lab.png)
 
 
 ## After you log in
@@ -81,25 +89,29 @@ data analysis!
 - **Your files live in your home directory.** Anything under your home persists across restarts unless otherwise noted by your site’s storage policy.
 - **To end your session:** _File → Log Out_ (JupyterLab) and optionally **Stop My Server** on the Hub page to free resources.
 
-!!! tip "Come back later"
-    Bookmark the link [launch.badgercompute.wisc.edu](https://launch.badgercompute.wisc.edu). When you return, you’ll usually go straight in via SSO unless your session expired (you’ll be prompted to sign in again). Your notebook may be stopped if idle, but files in your `/work` directory persist for 30 days.
+<Alert severity="info" sx={{ my: 2 }}>
+  <AlertTitle>Come back later</AlertTitle>
+  Bookmark the link <a href="https://launch.badgercompute.wisc.edu">launch.badgercompute.wisc.edu</a>. When you return, you’ll usually go straight in via SSO unless your session expired (you’ll be prompted to sign in again). Your notebook may be stopped if idle, but files in your <code>/work</code> directory persist for 30 days.
+</Alert>
 
 ## Troubleshooting
 
-??? summary "I get a "**Not Authorized**" page"
-    Your account may not be provisioned yet. You must complete the Canvas course and pass all checks before your account can be created. Accounts may take upto 24hrs to be activated. If you believe this is in error, contact support (see below).
+<AlertDropDown title={<>I get a <strong>Not Authorized</strong> page</>} severity="info">
+	Your account may not be provisioned yet. You must complete the Canvas course and pass all checks before your account can be created. Accounts may take upto 24hrs to be activated. If you believe this is in error, contact support (see below).
+</AlertDropDown>
 
-??? summary "Stuck on "**Server starting…**""
-    Refresh the page once. If it persists for >2–3 minutes:<br>
-    1) Click **Stop My Server**,  
-    2) Click **Start My Server** again,  
-    3) If it still fails, try a different server size or image and contact support with the approximate time and chosen options.
-    
-    **Note: Servers may take longer to start during peak usage times. BadgerCompute is a shared resource and availability is not guaranteed.**
+<AlertDropDown title={<>Stuck on <strong>Server Starting</strong></>} severity="info">
+	Refresh the page once. If it persists for >2–3 minutes:
+	1) Click **Stop My Server**,
+	2) Click **Start My Server** again,
+	3) If it still fails, try a different server size or image and contact support with the approximate time and chosen options.
 
-??? summary "I am getting a "400 : Bad Request" error"
-    This can happen if you already have an active session and try to start a new one. You can return to your previous session or stop it from the [Hub page](https://badgerhub.jupyter-uw-prod.chtc.io/hub/home). If the issue persists, try logging out and back in, or clear your cookies.
+	**Note: Servers may take longer to start during peak usage times. BadgerCompute is a shared resource and availability is not guaranteed.**
+</AlertDropDown>
 
+<AlertDropDown title={'I am getting a "400 : Bad Request" error'} severity="info">
+	This can happen if you already have an active session and try to start a new one. You can return to your previous session or stop it from the [Hub page](https://badgerhub.jupyter-uw-prod.chtc.io/hub/home). If the issue persists, try logging out and back in, or clear your cookies.
+</AlertDropDown>
 
 ## Sign-out, timeouts, and idle culling
 
