Redirect get-started

--- a/docs/login.mdx
+++ b/docs/login.mdx
@@ -18,7 +18,7 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
 ## Prerequisites
 
 - You have an active NetID
-- You have completed the required [BadgerCompute Certification Course](/get-started/#canvas-course)
+- You have completed the required [BadgerCompute Certification Course](/docs/hello-jupyter/#canvas-course)
     - **Annual renewal may be required.**
 
 
