Refactor to mdx

--- a/docs/get-help.mdx
+++ b/docs/get-help.mdx
@@ -1,10 +1,15 @@
+import Button from '@mui/material/Button';
+import ArrowOutwardIcon from '@mui/icons-material/ArrowOutward';
+
 # Get Help
 
-[BadgerCompute Discourse :material-arrow-top-right:](https://community.badgercompute.wisc.edu/){ .md-button .md-button--primary }
+## BadgerCompute Community
 
-## BadgerCompute Discourse
+Join the BadgerCompute Community at [community.badgercompute.wisc.edu](https://community.badgercompute.wisc.edu/)!
 
-Join our Discourse site at [community.badgercompute.wisc.edu](https://community.badgercompute.wisc.edu/)!
+<Button variant="contained" endIcon={<ArrowOutwardIcon />} sx={{ my: 2, }} disableElevation href="https://community.badgercompute.wisc.edu/">
+  BadgerCompute Community
+</Button> 
 
 There, you can 
 
@@ -12,7 +17,9 @@ There, you can
 * Report issues or bugs
 * Connect with like-minded researchers
 
-[![Homepage of BadgerCompute Discourse site](../images/badgercompute-discourse.png)](https://community.badgercompute.wisc.edu/)
+<a href="https://community.badgercompute.wisc.edu/">
+<img src="/docs/badgercompute-discourse.png" alt="BadgerCompute Community homepage" style={{border: '1px solid lightgray', height: '350px', width: 'auto'}} />
+</a>
 
 ### Log in to Discourse
 
