Refactor to use "BadgerCompute Community" instead of "Discourse"

--- a/docs/get-help.mdx
+++ b/docs/get-help.mdx
@@ -7,16 +7,16 @@ import {DISCOURSE_URL} from "../app/config";
 
 # Get Help
 
+
+## BadgerCompute Community
+
+Join the BadgerCompute Community at [community.badgercompute.wisc.edu](https://community.badgercompute.wisc.edu/)!
+
 <Box mb={2}>
 	<Link href={DISCOURSE_URL}>
-		<Button variant={'outlined'} endIcon={<OpenInNewIcon />}>BadgerCompute Discourse</Button>
+		<Button variant={'contained'} endIcon={<OpenInNewIcon />}>BadgerCompute Community</Button>
 	</Link>
 </Box>
-
-
-## BadgerCompute Discourse
-
-Join our Discourse site at [community.badgercompute.wisc.edu](https://community.badgercompute.wisc.edu/)!
 
 There, you can 
 
@@ -24,11 +24,11 @@ There, you can
 * Report issues or bugs
 * Connect with like-minded researchers
 
-[![Homepage of BadgerCompute Discourse site](/docs/get-help/discourse-homepage.png)](https://community.badgercompute.wisc.edu/)
+[![Homepage of BadgerCompute Community site](/docs/get-help/discourse-homepage.png)](https://community.badgercompute.wisc.edu/)
 
-### Log in to Discourse
+### Log in to BadgerCompute Community
 
-The Discourse site is available to anyone with a NetID.
+The BadgerCompute Community forum is available to anyone with a NetID.
 You must log in with your NetID to view the site.
 
 1. Go to [community.badgercompute.wisc.edu](https://community.badgercompute.wisc.edu/).
@@ -40,8 +40,8 @@ You must log in with your NetID to view the site.
 ## Email support
 
 At this time, we do not provide email support.
-All questions or concerns should be posted in the Discourse site. 
+All questions or concerns should be posted in the BadgerCompute Community forum.
 
 The email listed in the footer of this website is solely for feedback regarding the website, per university policy.
-Any questions about using or accessing the BadgerCompute service will be redirected to use the Discourse site.
+Any questions about using or accessing the BadgerCompute service will be redirected to use the BadgerCompute Community forum.
 
