Finish "Get Started" page

--- a/app/get-started/get-started.mdx
+++ b/app/get-started/get-started.mdx
@@ -4,9 +4,6 @@ import HelpIcon from '@mui/icons-material/Help';
 
 # Get Started with BadgerCompute
 
-1. [Is BadgerCompute for Me?](#is-badgercompute-for-me)
-2. [Take the Canvas Course](#take-the-canvas-course)
-3. [Log in to BadgerCompute](#log-in-to-badgercompute)
 
 ## Is BadgerCompute for Me?
 
@@ -62,4 +59,8 @@ You can only log in to BadgerCompute if you have completed the [Canvas Course](#
 </Alert>
 
 ## Next Steps
+
+* [Do the Introduction tutorial](/docs/hello-jupyter)
+* [Checkout the docs](/docs/)
+* [Join the BadgerCompute Community](https://community.badgercompute.wisc.edu)
 
