Bold Ordered Lists

--- a/docs/faqs.mdx
+++ b/docs/faqs.mdx
@@ -2,6 +2,9 @@
 
 ## Using BadgerCompute
 
+[//]: # (This element styles the list below it and that is it)
+<div className="boldOrderedListBelow" />
+
 1. **Who can use BadgerCompute?**
 
     There are only two requirements for using BadgerCompute:
@@ -41,9 +44,12 @@
     Badger Compute as well. 
     
     For a larger class, get in touch ([Community Forum](https://community.badgercompute.wisc.edu/c/get-started/5)) and we can discuss whether BadgerCompute or 
-    another service will be the best fit for your learners' needs. 
+    another service will be the best fit for your learners' needs.
 
 ## Using BadgerCompute notebooks
+
+[//]: # (This element styles the list below it and that is it)
+<div className="boldOrderedListBelow" />
 
 1. **Why can't I log in to the BadgerCompute notebook?**
 
@@ -76,12 +82,7 @@
 
 ## Software
 
-Coming soon! 
-
-<!--
-
-## Data
--->
+Coming soon!
 
 ## More resources
 
