adding bold to the login steps

--- a/docs/login.mdx
+++ b/docs/login.mdx
@@ -24,6 +24,9 @@ Use this guide to sign in to **BadgerCompute**, our Jupyter notebook service, an
 
 ## Step-by-step login
 
+[//]: # (This element styles the list below it and that is it)
+<div className="boldOrderedListBelow" />
+
 1. **Open the BadgerCompute Launch URL**
     
     Visit the BadgerCompute launch page:
